scribble-cli/src/test/resources/good/syntax/disamb/imports/pack1/Import01b.scr
module good.syntax.disamb.imports.pack1.Import01b;


type <java> "..." from "..." as TTT;


global protocol Import1b(role A, role B)
{
	3() from A to B;
}
