scribble-cli/src/test/resources/bad/syntax/disamb/modules/Modules01.scr
module bad.syntax.disamb.modules.Modules01;


// FIXME: inconsistent classification of diamb tests, e.g. modules vs protocoldecl, imports, etc
global protocol Foo(role A, role B)
{
	
}

global protocol Foo(role A, role B)
{
	
}
